--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -12,9 +12,10 @@
    <top>
       <HBox alignment="CENTER" prefHeight="35.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
+            <TextField fx:id="exclude" promptText="Exclusion" />
             <Button fx:id="getLogsInES" mnemonicParsing="false" text="ES">
                <HBox.margin>
-                  <Insets right="5.0" />
+                  <Insets left="5.0" right="5.0" />
                </HBox.margin>
             </Button>
             <TextField fx:id="filter" promptText="Filtres">
